# modular-service

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  Dockerfile-uv  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
deployment/compose/: README.md  compose.yaml
deployment/helm/modular-service/: Chart.yaml  values.yaml
deployment/k8s/server/: server-config.yaml  server.yaml
modular-service/: deployment_resources.json  requirements.txt
modular-service-admin-cli/: CHANGELOG.md  __version__.py  api_module.json  setup.py  version.py
modular-service-admin-cli/group/: __init__.py  application.py  customer.py  mode.py  modularservice.py  parent.py  policy.py  region.py  role.py  tenant.py  tenant_regions.py
modular-service-admin-cli/modular_service_admin_cli/: modular_admin.py  version.py
modular-service-admin-cli/modular_service_admin_cli/group/: __init__.py  application.py  customer.py  mode.py  modular_service.py  parent.py  policy.py  region.py  role.py  tenant.py  tenant_region.py
modular-service-admin-cli/modular_service_admin_cli/service/: adapter_client.py  config.py  constants.py  initializer.py  logger.py
modular-service-admin-cli/modular_service_cli/group/: __init__.py  application.py  customer.py  mode.py  modularservice.py  parent.py  policy.py  region.py  role.py  tenant.py  tenant_regions.py
modular-service-admin-cli/modular_service_cli/service/: adapter_client.py  api_client.py  config.py  constants.py  (+1 more)
modular-service-admin-cli/service/: adapter_client.py  config.py  constants.py  initializer.py  logger.py
modular-service-cli/: CHANGELOG.md  README.md  api_module.json  pyproject.toml
modular-service-cli/modular_service_cli/: version.py
modular-service-cli/modular_service_cli/group/: __init__.py  application.py  customer.py  modularservice.py  policy.py  region.py  role.py  tenant.py  tenant_regions.py  tenant_settings.py  users.py
modular-service-cli/modular_service_cli/service/: api_client.py  config.py  constants.py  logger.py  utils.py
modular-service/commons/: constants.py
modular-service/models/: jobs.py  setting.py
modular-service/services/: region_mutator_service.py  service_provider.py
scripts/: admin_policy.json  configure_environment.py  iam_permissions.json
src/: .env.example  deployment_resources.json  entrypoint.sh  main.py  requirements.txt  run.py
src/commons/: __init__.py  abstract_lambda.py  constants.py  exception.py  json_util.py  lambda_response.py  log_helper.py  mongo_util.py  regions.py  time_helper.py
src/connections/: mongodb_connection.py
src/models/: __init__.py  policy.py  role.py  setting.py  user.py
src/onprem/: app.py
src/services/: abstract_api_handler_lambda.py  application_mutator_service.py  customer_mutator_service.py  environment_service.py  openapi_spec_generator.py  parent_mutator_service.py  rbac_service.py  region_mutator_service.py  service_provider.py  setting_service.py  ssm_service.py  tenant_mutator_service.py  user_service.py
src/validators/: registry.py  request.py  response.py  utils.py
tests/: conftest.py  test_utils.py  utils.py
(+46 files in other folders)
