[project]
name = "modular-service"
description = "Service that allows to manage common modular entities"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = []


[tool.pyright]
pythonVersion = "3.10"
reportIncompatibleMethodOverride = "warning"
executionEnvironments = [
    {root = "src/", pythonVersion = "3.10"},
    {root = "tests/", pythonVersion = "3.10", extraPaths = ["src/"]}
]

[tool.ruff]
line-length = 79
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
