[project]
name = "modular-service"
description = "Service that allows to manage common modular entities"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
version = "3.3.0"
dependencies = [
    "modular-sdk @ git+https://github.com/epam/modular-sdk@2904a0d9532817b960ef076a5fe240c7ef50d359",
    "pydantic~=2.8.2",
    "python-dateutil>=2.9.0.post0",
    "routes~=2.5.1",
    "typing-extensions~=4.12.2",
]

[dependency-groups]
onprem = [
    "bcrypt~=4.1.2",
    "bottle~=0.12.25",
    "cryptography==43.0.3",
    "gunicorn~=21.2.0",
    "hvac~=2.1.0",
    "jwcrypto~=1.5.6",
]

[tool.pyright]
pythonVersion = "3.10"
reportIncompatibleMethodOverride = "warning"
executionEnvironments = [
    {root = "src/", pythonVersion = "3.10"},
    {root = "tests/", pythonVersion = "3.10", extraPaths = ["src/"]}
]

[tool.ruff]
line-length = 79
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
